[gd_scene load_steps=5 format=3 uid="uid://b8bth70ryw31k"]

[ext_resource type="Script" path="res://src/godot-src/GameWorld/WreckEntity/wreck.gd" id="1_51yci"]
[ext_resource type="PackedScene" uid="uid://biqdy1dg208l7" path="res://src/godot-src/GameWorld/Components/InventoryComponent/InventoryComponent.tscn" id="1_reqhy"]
[ext_resource type="Texture2D" uid="uid://bkiye01blg88s" path="res://assets/icon.svg" id="2_kuqoc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7a8cn"]
radius = 120.0

[node name="Wreck" type="Node2D"]
script = ExtResource("1_51yci")

[node name="InventoryComponent" parent="." instance=ExtResource("1_reqhy")]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.192157, 0.619608, 0.215686, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_kuqoc")

[node name="PlungeArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlungeArea"]
shape = SubResource("CircleShape2D_7a8cn")

[node name="time_to_plunge" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[connection signal="area_entered" from="PlungeArea" to="." method="_on_plunge_area_area_entered"]
[connection signal="area_exited" from="PlungeArea" to="." method="_on_plunge_area_area_exited"]
[connection signal="timeout" from="time_to_plunge" to="." method="_on_time_to_plunge_timeout"]
